  - remove DEPRECATED column(DBIx::Custom::Result)
  - remove DEPRECATED fetch_first(DBIx::Custom::Result)
  - remove DEPRECATED fetch_hash_first(DBIx::Custom::Result)
  - remove DEPRECATED execute(DBIx::Custom::Model)
  - remove DEPRECATED method(DBIx::Custom::Model)
  - remove DEPRECATED filter(DBIx::Custom::Model)
  - remove DEPRECATED name(DBIx::Custom::Model)
  - remove DEPRECATED type(::Model)
  - remove DEPRECATED DBIX_CUSTOM_DISABLE_MODEL_EXECUTE environment variable
  - remove DEPRECATED default_dbi_option(DBIx::Custom)
  - remove DEPRECATED dbi_option(DBIx::Custom)
  - remove DEPRECATED data_source(DBIx::Custom)
  - remove DEPRECATED dbi_options(DBIx::Custom)
  - remove DEPRECATED filter_check(DBIx::Custom)
  - remove DEPRECATED reserved_word_quote(DBIx::Custom)
  - remove DEPRECATED select_at(DBIx::Custom)
  - remove DEPRECATED delete_at(DBIx::Custom)
  - remove DEPRECATED update_at(DBIx::Custom)
  - remove DEPRECATED insert_at(DBIx::Custom)
  - remove DEPRECATED insert_param_tag(DBIx::Custom)
  - remove DEPRECATED update_param_tag(DBIx::Custom)
  - remove DEPRECATED assign_param(DBIx::Custom)
  - remove DEPRECATED update_param(DBIx::Custom)
  - remove DEPRECATED insert_param(DBIx::Custom)
  - remove DEPRECATED create_query(DBIx::Custom)
  - remove DEPRECATED apply_filter(DBIx::Custom)

0.37
  - catch up Object::Simple 3.16. fix DEPRECATED warnings.
0.36
  - Fix the bug that the following feature which is add to 0.35 don't work.
    add join attribute to DBIx::Custom::Where
    to add join infomartion to select method
0.35
  - remove EXPERIMENTAL status the following.
    add select method column option syntax
    {__MY__ => '*'}
  - remove EXPERIMENTAL last_sql attribute
  - add join attribute to DBIx::Custom::Where
    to add join infomartion to select method
0.34
  - (EXPERIMENTAL) fix async select not getting err bug.
0.33
  - (EXPERIMENTAL) fix MySQL async insert result.
0.32
  - (EXPERIMENTAL) add EXPERIMENTAL last_sth method.